--- a/map.css
+++ b/map.css
@@ -52,6 +52,16 @@ body {
 }
 
 #map svg circle {
+--color-departures: steelblue;
+--color-arrivals: darkorange;
+
+--color: color-mix(
+    in oklch,
+    var(--color-departures) calc(100% * var(--departure-ratio)),
+    var(--color-arrivals)
+  );
+
+  fill: var(--color);
 
   pointer-events: auto;
   cursor: pointer;
